# TgMiniAppTemplate-backend

./: .env.example  .gitignore  Dockerfile  jsconfig.json  package.json  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: sessions.py
app/api/routes/auth/: check.py  login.py  main.py  token.py
app/api/routes/ws/: manager.py  websocket.py
app/database/: database.py  redis.py
app/database/models/: ApiKeys.py  Files.py  OneTimeCodes.py  RecoveryCodes.py  RefreshSessions.py  Users.py
app/middleware/: auth.py  spam.py
app/services/: chaching.py
app/services/auth/: AuthService.py
app/shemes/: models.py
app/storage/: storage.py
app/utils/: __init__.py
new/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
new/alembic/: env.py
new/alembic/versions/: 0df43a7bd886_created_columns.py
new/app/: main.py
new/app/api/: main.py
new/app/api/routes/: bot_updates.py  ping.py
new/app/api/routes/auth/: check.py  login.py  main.py  token.py
new/app/api/routes/auth/sse/: manager.py
new/app/api/routes/sessions/: all_sessions.py  current.py  main.py
new/app/database/: database.py
new/app/database/models/: ApiKeys.py  Files.py  OneTimeCodes.py  RecoveryCodes.py  RefreshSessions.py  Users.py
new/app/middleware/: auth.py
new/app/services/auth/: AuthService.py
new/app/shemes/: login_models.py
new/app/utils/: __init__.py
old/src/: secrets-gen.js
old/src/database/: index.js
old/src/database/entities/: User.js
old/src/services/auth/: tokens.js  users.js  utils.js
old/src/services/session/: auth_session.js
old/src/v1/routes/: index.js
src/: index.js  swagger-gen.js  swagger.json
src/database/entities/: RefreshSession.js
src/middleware/: auth.js
src/minio/: client.js
src/services/auth/: index.js
src/services/session/: index.js  session_info.js
src/v1/routes/auth/: check.js  index.js
src/v1/routes/sessions/: current.js  index.js
(+6 files in other folders)
